More UI Changes

--- a/DaysUntoWeb/Views/Shared/_Layout.cshtml
+++ b/DaysUntoWeb/Views/Shared/_Layout.cshtml
@@ -49,60 +49,23 @@
                 <div class="row">
                     <div id="infoyou" class="span6">
                         <div class="breadcrumb">
-                          
-                                <div class="well well-small">
-                                    <i class="icon-calendar icon-4x pull-left icon-border"></i>
-                                    <h1>Days Unto</h1>
-                                    The easiest way to countdown your life's events.
-                                    <p>&nbsp;</p>
-    </div>
-                               
-                          
-                            
+                            <div class="well well-small">
+                                <i class="icon-calendar icon-4x pull-left icon-border"></i>
+                                <h1>Days Unto</h1>
+                                The easiest way to countdown your life's events.
+                                <br />
+                                <a href="#" class="tooltip-test" data-original-title="Facebook">
+                                    <img src="/images/facebook.png" width="32">
+                                </a>
+                                <a href="#" class="tooltip-test" data-original-title="Twitter">
+                                    <img src="/images/twitter.png" width="32">
+                                </a>
+                            </div>
                             <div class="clearfix"></div>
                         </div>
                     </div>
                     <!--/infoyou-->
-                    <div id="QuicContact" class="span6 pagination-centered visible-phone">
-                        <div class="breadcrumb">
-                            <a href="#" class="tooltip-test" data-original-title="Facebook">
-                                <img src="/images/facebook.png" width="32">
-                            </a>
-                            <a href="#" class="tooltip-test" data-original-title="Twitter">
-                                <img src="/images/twitter.png" width="32">
-                            </a>
-                            <a href="#" class="tooltip-test" data-original-title="Google">
-                                <img src="/images/google.png" width="32">
-                            </a>
-                            <a href="#" class="tooltip-test" data-original-title="LinkedIn">
-                                <img src="/images/linkedin.png" width="32">
-                            </a>
-                            <a href="#" class="tooltip-test" data-original-title="Flickr">
-                                <img src="/images/flickr.png" width="32">
-                            </a>
-                            <a href="#" class="tooltip-test" data-original-title="Tumblr">
-                                <img src="/images/tumblr.png" width="32">
-                            </a>
-                            <a href="#" class="tooltip-test" data-original-title="Youtube">
-                                <img src="/images/youtube.png" width="32">
-                            </a>
-                            <a href="#" class="tooltip-test" data-original-title="Vimeo">
-                                <img src="/images/vimeo.png" width="32">
-                            </a>
-                            <a href="#" class="tooltip-test" data-original-title="MySpace">
-                                <img src="/images/myspace.png" width="32">
-                            </a>
-                            <a href="#" class="tooltip-test" data-original-title="Reddit">
-                                <img src="/images/reddit.png" width="32">
-                            </a>
-                            <a href="#" class="tooltip-test" data-original-title="Stumbleupon">
-                                <img src="/images/stumbleupon.png" width="32">
-                            </a>
-                            <a href="#" class="tooltip-test" data-original-title="Delicious">
-                                <img src="/images/delicious.png" width="32">
-                            </a>
-                        </div>
-                    </div>
+
                     <!--/quickcontact-->
                 </div>
                 <!--/row-->
@@ -116,13 +79,10 @@
                                 <div class="span6">
                                     <div class="span5">
                                         @RenderBody()
-                                        <span class="label label-info">Cosy Interfaces, Full-time</span>
-                                        <a class="tooltip-test" data-original-title="Current work">
-                                            <img src="/images/current.png" width="32">
-                                        </a>
-                                        <br>
-                                        <br>
-                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut aliquip.
+                                        Fourth of July
+                                        <br />
+                                        <span class="label label-info">5 days left</span>
+
                                     </div>
                                     <!--/span5-->
                                 </div>
@@ -167,64 +127,22 @@
                     <!--/span6-->
                 </div>
                 <!--/row-->
-               
+
             </div>
             <!--/span6-->
             <div id="column-2" class="span6">
-                <div class="row">
-                    <div id="QuicContact" class="span6 pagination-centered hidden-phone">
-                        <div class="breadcrumb">
-                            <a href="#" class="tooltip-test" data-original-title="Facebook">
-                                <img src="/images/facebook.png" width="32">
-                            </a>
-                            <a href="#" class="tooltip-test" data-original-title="Twitter">
-                                <img src="/images/twitter.png" width="32">
-                            </a>
-                            <a href="#" class="tooltip-test" data-original-title="Google">
-                                <img src="/images/google.png" width="32">
-                            </a>
-                            <a href="#" class="tooltip-test" data-original-title="LinkedIn">
-                                <img src="/images/linkedin.png" width="32">
-                            </a>
-                            <a href="#" class="tooltip-test" data-original-title="Flickr">
-                                <img src="/images/flickr.png" width="32">
-                            </a>
-                            <a href="#" class="tooltip-test" data-original-title="Tumblr">
-                                <img src="/images/tumblr.png" width="32">
-                            </a>
-                            <a href="#" class="tooltip-test" data-original-title="Youtube">
-                                <img src="/images/youtube.png" width="32">
-                            </a>
-                            <a href="#" class="tooltip-test" data-original-title="Vimeo">
-                                <img src="/images/vimeo.png" width="32">
-                            </a>
-                            <a href="#" class="tooltip-test" data-original-title="MySpace">
-                                <img src="/images/myspace.png" width="32">
-                            </a>
-                            <a href="#" class="tooltip-test" data-original-title="Reddit">
-                                <img src="/images/reddit.png" width="32">
-                            </a>
-                            <a href="#" class="tooltip-test" data-original-title="Stumbleupon">
-                                <img src="/images/stumbleupon.png" width="32">
-                            </a>
-                            <a href="#" class="tooltip-test" data-original-title="Delicious">
-                                <img src="/images/delicious.png" width="32">
-                            </a>
-                        </div>
-                    </div>
-                    <!--/quickcontact-->
-                </div>
-                <!--/row-->
+
                 <div class="row">
                     <div class="span6">
                         <div id="skills" class="breadcrumb">
-                              <div class="well well-small">
-                                    <i class="icon-heart icon-2x pull-left"></i>
-                                    <span style="font-size: 2.0em;">Join us!</span><br/><br/>
-                                    Keep track of your own events! Simply sign in using Facebook or Twitter and begin adding your own events.
+                            <div class="well well-small">
+                                <i class="icon-heart icon-2x pull-left"></i>
+                                <span style="font-size: 2.0em;">Join us!</span><br />
+                                <br />
+                                Keep track of your own events! Simply sign in using Facebook or Twitter and begin adding your own events.
                                    
-    </div>
-                          
+                            </div>
+
                             <div class="row">
                                 <div class="span6">
                                     <div class="span1">
@@ -371,7 +289,7 @@
                     <!--/span6-->
                 </div>
                 <!--/row-->
-                
+
             </div>
             <!--/span6-->
         </div>
@@ -383,7 +301,7 @@
     @RenderSection("scripts", required: false)
 
 
-    
+
 
 </body>
 </html>
