--- a/DaysUntoWeb/Content/bootstrap-2.css
+++ b/DaysUntoWeb/Content/bootstrap-2.css
@@ -5147,10 +5147,10 @@ div.subnav-fixed {
     }
 
 .btn {
-    padding: 12px 16px;
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    border-radius: 0;
+    /*padding: 12px 16px;*/
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
     background-image: none;
     text-shadow: none;
     -webkit-box-shadow: none;
