--- a/DaysUntoWeb/Views/Shared/_Layout.cshtml
+++ b/DaysUntoWeb/Views/Shared/_Layout.cshtml
@@ -31,10 +31,8 @@
                 <a class="brand" href="#">Days Unto</a>
                 <div class="nav-collapse">
                     <ul class="nav">
-                        <li><a href="#" onclick="$('html,body').animate({scrollTop: $('#work-experience').offset().top}, 1500);">Work experience</a></li>
-                        <li><a href="#" onclick="$('html,body').animate({scrollTop: $('#skills').offset().top}, 1500);">Skills</a></li>
-                        <li><a href="#portifolio" onclick="$('html,body').animate({scrollTop: $('#portifolio').offset().top}, 1500);">Portifolios</a></li>
-                        <li><a href="#education" onclick="$('html,body').animate({scrollTop: $('#education').offset().top}, 1500);">Education</a></li>
+                        <li><a href="#" onclick="$('html,body').animate({scrollTop: $('#upcoming-events').offset().top}, 1500);">Upcoming Events</a></li>
+                        <li><a href="#" onclick="$('html,body').animate({scrollTop: $('#your-upcoming-events').offset().top}, 1500);">Your Upcoming Events</a></li>
                     </ul>
                 </div>
                 <!--/.nav-collapse -->
@@ -45,255 +43,9 @@
     <div class="container">
 
         <div class="row">
-            <div id="column-1" class="span6">
-                <div class="row">
-                    <div id="infoyou" class="span6">
-                        <div class="breadcrumb">
-                            <div class="well well-small">
-                                <i class="icon-calendar icon-4x pull-left icon-border"></i>
-                                <h1>Days Unto</h1>
-                                The easiest way to countdown your life's events.
-                                <br />
-                                <a href="#" class="tooltip-test" data-original-title="Facebook">
-                                    <img src="/images/facebook.png" width="32">
-                                </a>
-                                <a href="#" class="tooltip-test" data-original-title="Twitter">
-                                    <img src="/images/twitter.png" width="32">
-                                </a>
-                            </div>
-                            <div class="clearfix"></div>
-                        </div>
-                    </div>
-                    <!--/infoyou-->
-
-                    <!--/quickcontact-->
-                </div>
-                <!--/row-->
-                <div class="row">
-                    <div class="span6">
-                        <div id="work-experience" class="breadcrumb">
-                            <legend>
-                                <h2>Upcoming events</h2>
-                            </legend>
-                            <div class="row">
-                                <div class="span6">
-                                    <div class="span5">
-                                        @RenderBody()
-                                        Fourth of July
-                                        <br />
-                                        <span class="label label-info">5 days left</span>
-
-                                    </div>
-                                    <!--/span5-->
-                                </div>
-                                <!--/span6-->
-                            </div>
-                            <!--/row-->
-                            <hr>
-                            <div class="row">
-                                <div class="span6">
-                                    <div class="span5">
-                                        <span class="label label-info">Cosy Interfaces, Full-time</span>
-                                        <br>
-                                        <br>
-                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut aliquip.
-                                    </div>
-                                    <!--/span5-->
-                                </div>
-                                <!--/span6-->
-                            </div>
-                            <!--/row-->
-                            <hr>
-                            <div class="row">
-                                <div class="span6">
-                                    <div class="span5">
-                                        <span class="label label-info">Cosy Interfaces, Full-time</span>
-                                        <br>
-                                        <br>
-                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliqua erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ulla mcorper suscipit lobortis nisl ut aliquip.
-                                    </div>
-                                    <!--/span5-->
-                                </div>
-                                <!--/span6-->
-                            </div>
-                            <!--/row-->
-
-                            <a class="hidden-desktop pull-right" onclick="$('html,body').animate({scrollTop: $('#infoyou').offset().top}, 1500);"><i class="icon-circle-arrow-up" style="cursor: pointer;"></i></a>
-                            <div class="clearfix"></div>
-
-                        </div>
-                        <!--/breadcrumb-->
-                    </div>
-                    <!--/span6-->
-                </div>
-                <!--/row-->
-
-            </div>
-            <!--/span6-->
-            <div id="column-2" class="span6">
-
-                <div class="row">
-                    <div class="span6">
-                        <div id="skills" class="breadcrumb">
-                            <div class="well well-small">
-                                <i class="icon-heart icon-2x pull-left"></i>
-                                <span style="font-size: 2.0em;">Join us!</span><br />
-                                <br />
-                                Keep track of your own events! Simply sign in using Facebook or Twitter and begin adding your own events.
-                                   
-                            </div>
-
-                            <div class="row">
-                                <div class="span6">
-                                    <div class="span1">
-                                        <span class="label label-success">PHP</span>
-                                    </div>
-                                    <!--/span1-->
-                                    <div class="span4">
-                                        <div class="progress progress-success progress-striped active">
-                                            <div class="bar" style="width: 88%"></div>
-                                        </div>
-                                        <!--/progress bar-->
-                                    </div>
-                                    <!--/span4-->
-                                </div>
-                                <!--/span6-->
-                            </div>
-                            <!--/row-->
-                            <div class="row">
-                                <div class="span6">
-                                    <div class="span1">
-                                        <span class="label label-success">HTML</span>
-                                    </div>
-                                    <!--/span1-->
-                                    <div class="span4">
-                                        <div class="progress progress-success progress-striped active">
-                                            <div class="bar" style="width: 93%"></div>
-                                        </div>
-                                        <!--/progress bar-->
-                                    </div>
-                                    <!--/span4-->
-                                </div>
-                                <!--/span6-->
-                            </div>
-                            <!--/row-->
-                            <div class="row">
-                                <div class="span6">
-                                    <div class="span1">
-                                        <span class="label label-success">Javascript</span>
-                                    </div>
-                                    <!--/span1-->
-                                    <div class="span4">
-                                        <div class="progress progress-success progress-striped active">
-                                            <div class="bar" style="width: 76%"></div>
-                                        </div>
-                                        <!--/progress bar-->
-                                    </div>
-                                    <!--/span4-->
-                                </div>
-                                <!--/span6-->
-                            </div>
-                            <!--/row-->
-                            <div class="row">
-                                <div class="span6">
-                                    <div class="span1">
-                                        <span class="label label-success">CSS</span>
-                                    </div>
-                                    <!--/span1-->
-                                    <div class="span4">
-                                        <div class="progress progress-success progress-striped active">
-                                            <div class="bar" style="width: 82%"></div>
-                                        </div>
-                                        <!--/progress bar-->
-                                    </div>
-                                    <!--/span4-->
-                                </div>
-                                <!--/span6-->
-                            </div>
-                            <!--/row-->
-                            <div class="row">
-                                <div class="span6">
-                                    <div class="span1">
-                                        <span class="label label-warning">Fireworks</span>
-                                    </div>
-                                    <!--/span1-->
-                                    <div class="span4">
-                                        <div class="progress progress-warning progress-striped active">
-                                            <div class="bar" style="width: 69%"></div>
-                                        </div>
-                                        <!--/progress bar-->
-                                    </div>
-                                    <!--/span4-->
-                                </div>
-                                <!--/span6-->
-                            </div>
-                            <!--/row-->
-                            <div class="row">
-                                <div class="span6">
-                                    <div class="span1">
-                                        <span class="label label-warning">Photoshop</span>
-                                    </div>
-                                    <!--/span1-->
-                                    <div class="span4">
-                                        <div class="progress progress-warning progress-striped active">
-                                            <div class="bar" style="width: 55%"></div>
-                                        </div>
-                                        <!--/progress bar-->
-                                    </div>
-                                    <!--/span4-->
-                                </div>
-                                <!--/span6-->
-                            </div>
-                            <!--/row-->
-                            <div class="row">
-                                <div class="span6">
-                                    <div class="span1">
-                                        <span class="label label-warning">Illstrator</span>
-                                    </div>
-                                    <!--/span1-->
-                                    <div class="span4">
-                                        <div class="progress progress-warning progress-striped active">
-                                            <div class="bar" style="width: 48%"></div>
-                                        </div>
-                                        <!--/progress bar-->
-                                    </div>
-                                    <!--/span4-->
-                                </div>
-                                <!--/span6-->
-                            </div>
-                            <!--/row-->
-                            <div class="row">
-                                <div class="span6">
-                                    <div class="span1">
-                                        <span class="label label-important">Flash</span>
-                                    </div>
-                                    <!--/span1-->
-                                    <div class="span4">
-                                        <div class="progress progress-danger progress-striped active">
-                                            <div class="bar" style="width: 38%"></div>
-                                        </div>
-                                        <!--/progress bar-->
-                                    </div>
-                                    <!--/span4-->
-                                </div>
-                                <!--/span6-->
-                            </div>
-                            <!--/row-->
-
-                            <a class="hidden-desktop pull-right" onclick="$('html,body').animate({scrollTop: $('#infoyou').offset().top}, 1500);"><i class="icon-circle-arrow-up" style="cursor: pointer;"></i></a>
-                            <div class="clearfix"></div>
-
-                        </div>
-                        <!--/breadcrumb-->
-                    </div>
-                    <!--/span6-->
-                </div>
-                <!--/row-->
-
-            </div>
-            <!--/span6-->
-        </div>
-        <!--/row-->
+       @RenderBody()
+    </div>
+    <!--/row-->
     </div>
     <!-- /container -->
 
