More design changes.

--- a/DaysUntoWeb/Views/Account/ExternalLoginFailure.cshtml
+++ b/DaysUntoWeb/Views/Account/ExternalLoginFailure.cshtml
@@ -2,7 +2,26 @@
     ViewBag.Title = "Login Failure";
 }
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-    <h2>Unsuccessful login with service.</h2>
-</hgroup>
+<div id="column-1" class="span6">
+    <div class="row">
+        <div id="infoyou" class="span6">
+            <div class="breadcrumb">
+                <div class="well well-small">
+                    <i class="icon-calendar icon-4x pull-left icon-border"></i>
+                    <h1>Days Unto</h1>
+                    The easiest way to countdown your life's events. Keep track of your own events! Simply sign in using Facebook or Twitter and begin adding your own events.
+                    <br />
+                    <br />
+                    <hr/>
+                    <h2>@ViewBag.Title.</h2>
+                    <p>
+                        Unsuccessful login with service.
+                    </p>
+                  
+                </div>
+                <div class="clearfix"></div>
+            </div>
+        </div>
+    </div>
+</div>
+
