--- a/DaysUntoWeb/Content/bootstrap-2.css
+++ b/DaysUntoWeb/Content/bootstrap-2.css
@@ -449,7 +449,7 @@ h4,
 h5,
 h6 {
     margin: 0;
-    font-family: 'Lobster', cursive;
+     font-family: 'Cabin', Verdana, sans-serif;
     font-weight: normal;
     color: inherit;
     text-rendering: optimizelegibility;
@@ -1314,9 +1314,9 @@ select:focus:required:invalid {
 
         .input-prepend .add-on:first-child,
         .input-prepend .btn:first-child {
-            -webkit-border-radius: 0 0 0 0;
-            -moz-border-radius: 0 0 0 0;
-            border-radius: 0 0 0 0;
+            -webkit-border-radius: 3px 0 0 3px;
+            -moz-border-radius: 3px 0 0 3px;
+            border-radius: 3px 0 0 3px;
         }
 
     .input-append input,
@@ -1334,9 +1334,9 @@ select:focus:required:invalid {
 
     .input-append .add-on:last-child,
     .input-append .btn:last-child {
-        -webkit-border-radius: 0 0 0 0;
-        -moz-border-radius: 0 0 0 0;
-        border-radius: 0 0 0 0;
+       -webkit-border-radius: 0 3px 3px 0;
+  -moz-border-radius: 0 3px 3px 0;
+  border-radius: 0 3px 3px 0;
     }
 
     .input-prepend.input-append input,
@@ -1350,17 +1350,17 @@ select:focus:required:invalid {
     .input-prepend.input-append .add-on:first-child,
     .input-prepend.input-append .btn:first-child {
         margin-right: -1px;
-        -webkit-border-radius: 0 0 0 0;
-        -moz-border-radius: 0 0 0 0;
-        border-radius: 0 0 0 0;
+  -webkit-border-radius: 3px 0 0 3px;
+  -moz-border-radius: 3px 0 0 3px;
+  border-radius: 3px 0 0 3px;
     }
 
     .input-prepend.input-append .add-on:last-child,
     .input-prepend.input-append .btn:last-child {
-        margin-left: -1px;
-        -webkit-border-radius: 0 0 0 0;
-        -moz-border-radius: 0 0 0 0;
-        border-radius: 0 0 0 0;
+       margin-left: -1px;
+  -webkit-border-radius: 0 3px 3px 0;
+  -moz-border-radius: 0 3px 3px 0;
+  border-radius: 0 3px 3px 0;
     }
 
 .search-query {
@@ -5426,7 +5426,7 @@ select {
 }
 
 button {
-    margin-left: 12px;
+    /*margin-left: 12px;*/
 }
 
 input,
@@ -5835,6 +5835,25 @@ blockquote {
     -moz-box-shadow: 0 0 5px #ad1d28;
     -webkit-box-shadow: 0 0 5px #ad1d28;
 }
+
+.calendarAdd {
+    background: #ebebeb;
+    font-family: "Helvetica Neue", Arial, Helvetica, "Nimbus Sans L", sans-serif;
+    float: left;
+    margin-right: 20px;
+    width: 100%;
+    height: 165px;
+    font-size: 12px;
+    border: 1px solid #ad1d28;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    box-shadow: 0 0 5px #ad1d28;
+    -moz-box-shadow: 0 0 5px #ad1d28;
+    -webkit-box-shadow: 0 0 5px #ad1d28;
+}
+
+
 .calendar > span {
 display: block;
 }
@@ -5859,3 +5878,41 @@ display: block;
         background: -webkit-gradient(linear, left top, left bottom, from(#ad1d28), to(#e6e6e6), color-stop(.08,#f9f9f9));
         background: -moz-linear-gradient(top, #f9f9f9, #e6e6e6);
     }
+
+
+    .calendarAdd > span {
+display: block;
+}
+    .calendarAdd > .month {
+        background: #ad1d28;
+        padding: 2px 2px 2px 2px;
+        text-align: left;
+         font-family: 'Lobster', cursive;
+        font-size: large;
+        color: #ffffff;
+       
+    }
+    .calendarAdd > .day {
+        padding: 10px 2px 2px 2px;
+        text-align: center;
+        font-weight: bold;
+        font-size: 24px;
+        color: #000000;
+        background: #fff;
+        -webkit-border-bottom-left-radius: 5px;
+        -moz-border-radius-bottomleft: 5px;
+        -webkit-border-bottom-right-radius: 5px;
+        -moz-border-radius-bottomright: 5px;
+        background: -webkit-gradient(linear, left top, left bottom, from(#ad1d28), to(#e6e6e6), color-stop(.08,#f9f9f9));
+        background: -moz-linear-gradient(top, #f9f9f9, #e6e6e6);
+    }
+
+.wellAdd {
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    border-color: #ad1d28;
+    border-style: solid;
+    border-width: thin;
+    padding: 2px;
+}
