--- a/DaysUntoWeb/Views/Home/Index.cshtml
+++ b/DaysUntoWeb/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using DaysUntoWeb.Helpers
 @model DaysUntoWeb.Models.HomeViewModel
-
+  <div class="row">
 <div id="column-1" class="span6">
     <div class="row">
         <div id="infoyou" class="span6">
@@ -11,16 +11,7 @@
                     The easiest way to countdown your life's events. Keep track of your own events!
                     <br />
                     <br />
-                    @if (!Request.IsAuthenticated)
-                    {
-                        using (Html.BeginForm("ExternalLogin", "Account", new {ReturnUrl = ViewBag.ReturnUrl}))
-                        {
-                            @Html.AntiForgeryToken()
-                            <button type="submit" name="provider" class="zocial facebook" value="facebook" title="Sign in using your Facebook account">Sign in with Facebook</button>
-                            <button type="submit" name="provider" class="zocial twitter" value="twitter" title="Sign in using your Twitter account">Sign in with Twitter</button>
-                        }
-                    }
-                    else
+                    @if (Request.IsAuthenticated)
                     {
                         <hr style="margin: 0;"/>
                         <div class="well-small">
@@ -32,10 +23,12 @@
                                 <button class="btn" style="vertical-align: top;" type="submit">Add</button>
                             </form>
                             Import your calendar (.ics) file.<br/>
-                            <form accept-charset="UTF-8" action="" method="post">
-                                <input class="input-file" name="calendarfile" title="Select Calendar File"  type="file">
-                                <button class="btn" style="vertical-align: top;" type="submit">Import</button>
-                            </form>
+                            @using (Html.BeginForm("ImportCalendar", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                            {
+                                
+                                    <input class="input-file" name="calendarfile" title="Select Calendar File"  type="file">
+                                    <button class="btn" style="vertical-align: top;" type="submit">Import</button>
+                            }
                         </div>
                     }
                 </div>
@@ -80,7 +73,6 @@
         <!--/span6-->
     </div>
     <!--/row-->
-
 </div>
 <!--/span6-->
 <div id="column-2" class="span6">
@@ -88,60 +80,63 @@
     <div class="row">
         <div class="span6">
             <div id="your-upcoming-events" class="breadcrumb">
-
                     @if (WebSecurity.IsAuthenticated)
-                    {  
-                     
+                    {
+
                         <div class="row">
                             <div class="row pull-right">
                                 <span style="font-size: 1.2em; font-weight: bold; padding-right: 5px;">Welcome back, @WebSecurity.CurrentUserName</span>
-                                @Html.ActionLink("Sign Out", "LogOff", "Account", null, new { @class = "btn " })
+                                @Html.ActionLink("Sign Out", "LogOff", "Account", null, new {@class = "btn "})
                             </div>
                          
 
                         </div>
                         if (Model.CalendarEvents.Any())
                         {
-                            <span style="font-size: 1.4em;">Here are your upcoming events for this year!</span>
+                            <div id="upcoming-events" class="breadcrumb">
+                                <h1>Your upcoming events
+                                </h1><br/>
+                                @foreach (var calendarEvent in Model.CalendarEvents)
+                                {
+                                    <div class="row">
+                                        <div class="span6">
+                                            <div class="span5">
+                                                <div class="calendar event_date">
+                                                    <span class="month">@Html.GetMonthName(calendarEvent.CalendarEventDate)</span>
+                                                    <span class="day">@calendarEvent.CalendarEventDate.Day</span>
+                                                </div>
+                                                <h3>@calendarEvent.Name</h3>
+                                                <span class="label label-info">@Html.DisplayDaysLeft(calendarEvent.CalendarEventDate)</span>
+                                            </div>
+                                            <!--/span5-->
+                                        </div>
+                                        <!--/span6-->
+                                    </div>
+                                    <!--/row-->
+                                    <hr />
+                                }
+                                
+           
+                                <a class="pull-right" onclick=" $('html,body').animate({ scrollTop: $('#infoyou').offset().top }, 1500); "><i class="icon-circle-arrow-up" style="cursor: pointer;"></i></a>
+               
+                            </div>
                         }
                         else
                         {
-                             <div id="upcoming-events" class="breadcrumb">
-                <h1>Your upcoming events
-                </h1><br/>
-                @foreach (var holiday in Model.Holidays)
-                {
-                    <div class="row">
-                        <div class="span6">
-                            <div class="span5">
-                                <div class="calendar event_date">
-                                    <span class="month">@Html.GetMonthName(holiday.HolidayDate)</span>
-                                    <span class="day">@holiday.HolidayDate.Day</span>
-                                </div>
-                                <h3>@holiday.HolidayName</h3>
-                                <span class="label label-info">@Html.DisplayDaysLeft(holiday.HolidayDate)</span>
-                            </div>
-                            <!--/span5-->
-                        </div>
-                        <!--/span6-->
-                    </div>
-                    <!--/row-->
-                    <hr />
-                }
-
-
-
-                <a class="hidden-desktop pull-right" onclick="$('html,body').animate({scrollTop: $('#infoyou').offset().top}, 1500);"><i class="icon-circle-arrow-up" style="cursor: pointer;"></i></a>
-                <div class="clearfix"></div>
-
-            </div>
+                            <p>Please take a moment to add an event!</p>
                         }
-
-
                     }
                     else
                     {
                         <span style="font-size: 2.0em;">Reserved for <strong>your</strong> upcoming events!</span>
+                        <p>&nbsp;</p>
+                        <p> Sign in below to start adding events</p>
+                         using (Html.BeginForm("ExternalLogin", "Account", new {ReturnUrl = ViewBag.ReturnUrl}))
+                        {
+                            @Html.AntiForgeryToken()
+                            <button type="submit" name="provider" class="zocial facebook" value="facebook" title="Sign in using your Facebook account">Sign in with Facebook</button>
+                            <button type="submit" name="provider" class="zocial twitter" value="twitter" title="Sign in using your Twitter account">Sign in with Twitter</button>
+                        }
                     }
 
 
@@ -149,10 +144,7 @@
                 </div>
 
 
-                @if (Model.CalendarEvents.Any())
-                {
-                    <a class="pull-right" onclick=" $('html,body').animate({ scrollTop: $('#infoyou').offset().top }, 1500); "><i class="icon-circle-arrow-up" style="cursor: pointer;"></i></a>
-                }
+              
                 <div class="clearfix"></div>
 
             </div>
@@ -161,6 +153,4 @@
         <!--/span6-->
     </div>
     <!--/row-->
-
-<!--/span6-->
 
