--- a/DaysUntoWeb/Views/Home/Index.cshtml
+++ b/DaysUntoWeb/Views/Home/Index.cshtml
@@ -14,12 +14,13 @@
                     @if (Request.IsAuthenticated)
                     {
                         <hr style="margin: 0;"/>
-                        <div class="well-small">
-                            <h2 style="padding-bottom: 4px;">Add Events</h2>
+                       
+                           <div class="well-small">
+                            <h2 style="padding-bottom: 4px;">Add Events  @Html.ActionLink("Sign Out", "LogOff", "Account", null, new {@class = "btn pull-right", @style="margin-top:6px;"})</h2>
                             Manual Entry<br/>
                             <form accept-charset="UTF-8" action="" method="post">
-                                <input class="input-medium" name="name" placeholder="Name" type="text">
-                                <input class="input-medium" name="username" placeholder="Date" type="text">
+                                <input class="input-medium" name="calendarName" placeholder="Name" type="text">
+                                <input class="input-medium datepicker" name="calendarDate" placeholder="Date" type="text">
                                 <button class="btn" style="vertical-align: top;" type="submit">Add</button>
                             </form>
                             Import your calendar (.ics) file.<br/>
@@ -83,14 +84,7 @@
                     @if (WebSecurity.IsAuthenticated)
                     {
 
-                        <div class="row">
-                            <div class="row pull-right">
-                                <span style="font-size: 1.2em; font-weight: bold; padding-right: 5px;">Welcome back, @WebSecurity.CurrentUserName</span>
-                                @Html.ActionLink("Sign Out", "LogOff", "Account", null, new {@class = "btn "})
-                            </div>
-                         
-
-                        </div>
+                      
                         if (Model.CalendarEvents.Any())
                         {
                             <div id="upcoming-events" class="breadcrumb">
@@ -128,9 +122,8 @@
                     }
                     else
                     {
-                        <span style="font-size: 2.0em;">Reserved for <strong>your</strong> upcoming events!</span>
-                        <p>&nbsp;</p>
-                        <p> Sign in below to start adding events</p>
+                        <h1>Sign in below to start adding events
+                </h1><br/>
                          using (Html.BeginForm("ExternalLogin", "Account", new {ReturnUrl = ViewBag.ReturnUrl}))
                         {
                             @Html.AntiForgeryToken()
