Major UI Changes, Updated a few JS libraries
Also added editing capabilities to user events.

--- a/DaysUntoWeb/Content/datepicker.css
+++ b/DaysUntoWeb/Content/datepicker.css
@@ -59,6 +59,7 @@
 .datepicker td.day:hover {
   background: #ad1d28;
   cursor: pointer;
+    color: #ffffff;
 }
 .datepicker td.day.disabled {
   color: #eeeeee;
