--- a/DaysUntoWeb/Content/bootstrap.css
+++ b/DaysUntoWeb/Content/bootstrap.css
@@ -160,9 +160,9 @@ textarea {
 }
 
 body {
-  padding-top:60px;
+  padding-top:0px;
   margin: 0;
-  font-family: 'Alike', serif;
+  font-family: Tahoma, 'Alike', serif;
   font-size: 13px;
   line-height: 18px;
   color: #333;
@@ -176,7 +176,7 @@ a {
 
 a:hover {
   color: #005580;
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 .row {
@@ -689,7 +689,7 @@ cite {
 code,
 pre {
   padding: 0 3px 2px;
-  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+  font-family: Tahoma, Menlo, Monaco, Consolas, "Courier New", monospace;
   font-size: 12px;
   color: #333333;
   -webkit-border-radius: 3px;
@@ -796,7 +796,7 @@ input,
 button,
 select,
 textarea {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: Tahoma, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 label {
@@ -1108,9 +1108,10 @@ textarea[disabled],
 input[readonly],
 select[readonly],
 textarea[readonly] {
-  cursor: not-allowed;
+    cursor: pointer;
+  /*cursor: not-allowed;
   background-color: #eeeeee;
-  border-color: #ddd;
+  border-color: #ddd;*/
 }
 
 input[type="radio"][disabled],
@@ -3760,7 +3761,7 @@ input[type="submit"].btn.btn-mini {
 
 .navbar-search .search-query {
   padding: 4px 9px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: Tahoma, "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 13px;
   font-weight: normal;
   line-height: 1;
@@ -5101,4 +5102,110 @@ ul.accordion-group.nav {
 
 .backcolor-grey{
 	background-color:#FFFFED;
+}
+
+.calendar {
+    background: #ebebeb;
+    font-family: Tahoma, "Helvetica Neue", Arial, Helvetica, "Nimbus Sans L", sans-serif;
+    float: left;
+    margin-right: 20px;
+    width: 55px;
+    height: 60px;
+    font-size: 12px;
+    border: 1px solid #ad1d28;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    box-shadow: 0 0 5px #ad1d28;
+    -moz-box-shadow: 0 0 5px #ad1d28;
+    -webkit-box-shadow: 0 0 5px #ad1d28;
+}
+
+.calendarAdd {
+    background: #ebebeb;
+    font-family: Tahoma, "Helvetica Neue", Arial, Helvetica, "Nimbus Sans L", sans-serif;
+    float: left;
+    margin-right: 20px;
+    width: 100%;
+    height: 165px;
+    font-size: 12px;
+    border: 1px solid #ad1d28;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    box-shadow: 0 0 5px #ad1d28;
+    -moz-box-shadow: 0 0 5px #ad1d28;
+    -webkit-box-shadow: 0 0 5px #ad1d28;
+}
+
+
+.calendar > span {
+display: block;
+}
+    .calendar > .month {
+        background: #ad1d28;
+        padding: 0 2px 0 2px;
+        text-align: center;
+        color: #ffffff;
+       
+    }
+    .calendar > .day {
+        padding: 5px 2px 2px 2px;
+        text-align: center;
+        font-weight: bold;
+        font-size: 24px;
+        color: #000000;
+        background: #fff;
+        -webkit-border-bottom-left-radius: 5px;
+        -moz-border-radius-bottomleft: 5px;
+        -webkit-border-bottom-right-radius: 5px;
+        -moz-border-radius-bottomright: 5px;
+        background: -webkit-gradient(linear, left top, left bottom, from(#ad1d28), to(#e6e6e6), color-stop(.08,#f9f9f9));
+        background: -moz-linear-gradient(top, #f9f9f9, #e6e6e6);
+    }
+
+
+    .calendarAdd > span {
+display: block;
+}
+    .calendarAdd > .month {
+        background: #ad1d28;
+        padding: 2px 2px 2px 2px;
+        text-align: left;
+         font-family: Tahoma, 'Lobster', cursive;
+        font-size: large;
+        color: #ffffff;
+       
+    }
+    .calendarAdd > .day {
+        padding: 10px 2px 2px 2px;
+        text-align: center;
+        font-weight: bold;
+        font-size: 24px;
+        color: #000000;
+        background: #fff;
+        -webkit-border-bottom-left-radius: 5px;
+        -moz-border-radius-bottomleft: 5px;
+        -webkit-border-bottom-right-radius: 5px;
+        -moz-border-radius-bottomright: 5px;
+        background: -webkit-gradient(linear, left top, left bottom, from(#ad1d28), to(#e6e6e6), color-stop(.08,#f9f9f9));
+        background: -moz-linear-gradient(top, #f9f9f9, #e6e6e6);
+    }
+
+.wellAdd {
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    border-color: #ad1d28;
+    border-style: solid;
+    border-width: thin;
+    padding: 2px;
+}
+
+.label.error {
+    font-weight: bold;
+    color: #ad1d28;
+    padding: 2px 8px;
+    margin-top: 2px;
+    display: inline-block;
 }
