--- a/DaysUntoWeb/Views/Home/Index.cshtml
+++ b/DaysUntoWeb/Views/Home/Index.cshtml
@@ -1,150 +1,30 @@
 ﻿@using DaysUntoWeb.Helpers
 @model DaysUntoWeb.Models.HomeViewModel
-  <div class="row">
-<div id="column-1" class="span6">
-    <div class="row">
-        <div id="infoyou" class="span6">
-            <div class="breadcrumb">
-                <div class="well-small">
-                    <i class="icon-calendar icon-4x pull-left icon-border"></i>
-                    <h1>Days Unto</h1>
-                    The easiest way to countdown your life's events. Keep track of your own events!
-                    <br />
-                    <br />
-                    @if (Request.IsAuthenticated)
-                    {
-                        <hr style="margin: 0;"/>
-                       
-                           <div class="well-small">
-                            <h2 style="padding-bottom: 4px;">Add Events  @Html.ActionLink("Sign Out", "LogOff", "Account", null, new {@class = "btn pull-right", @style="margin-top:8px;"})</h2>
-                            Manual Entry<br/>
-                            @using (Html.BeginForm("ManualEntry", "Home", FormMethod.Post, new {@id="entry-form"}))
-                            {
-                                <input class="input-medium" name="calendarName" id="calendarName" placeholder="Name" type="text" required />
-                                <input class="input-medium datepicker" name="calendarDate" id="calendarDate" placeholder="Date" type="text" required readonly="readonly"/>
-                                <button class="btn" style="vertical-align: top;" type="submit">Add</button>
-                            }
-                            Import your calendar (.ics) file.<br/>
-                            @using (Html.BeginForm("ImportCalendar", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
-                            {
-                                
-                                <input class="input-file" name="calendarfile" title="Select Calendar File"  type="file" required />
-                                    <button class="btn" style="vertical-align: top;" type="submit">Import</button>
-                            }
-                        </div>
-                    }
-                </div>
-                <div class="clearfix"></div>
-            </div>
-        </div>
-    </div>
-    <!--/row-->
-    <div class="row">
-        <div class="span6">
-            <div id="upcoming-events" class="breadcrumb">
-                <h1>Upcoming @Model.Country events
-                </h1><br/>
-                @foreach (var holiday in Model.Holidays)
-                {
-                    <div class="row">
-                        <div class="span6">
-                            <div class="span5">
-                                <div class="calendar event_date">
-                                    <span class="month">@Html.GetMonthName(holiday.HolidayDate)</span>
-                                    <span class="day">@holiday.HolidayDate.Day</span>
-                                </div>
-                                <h3>@holiday.HolidayName</h3>
-                                <span class="label label-info">@Html.DisplayDaysLeft(holiday.HolidayDate)</span>
-                            </div>
-                            <!--/span5-->
-                        </div>
-                        <!--/span6-->
+<div class="row">
+    <div id="column-1" class="span6">
+        <div class="row">
+            <div id="infoyou" class="span6">
+                <div class="breadcrumb">
+                    <div class="well-small">
+                        <i class="icon-calendar icon-4x pull-left icon-border"></i>
+                        <h1>Days Unto</h1>
+                        The easiest way to countdown your life's events. Keep track of your own events!
+                        <br />
+                        <br />
+                        @if (WebSecurity.IsAuthenticated)
+                        {
+                            @Html.Partial("_AddEvent")
+                        }
                     </div>
-                    <!--/row-->
-                    <hr />
-                }
-
-
-
-                <a class="hidden-desktop pull-right" onclick="$('html,body').animate({scrollTop: $('#infoyou').offset().top}, 1500);"><i class="icon-circle-arrow-up" style="cursor: pointer;"></i></a>
-                <div class="clearfix"></div>
-
-            </div>
-            <!--/breadcrumb-->
-        </div>
-        <!--/span6-->
-    </div>
-    <!--/row-->
-</div>
-<!--/span6-->
-<div id="column-2" class="span6">
-
-    <div class="row">
-        <div class="span6">
-            <div id="your-upcoming-events" class="breadcrumb">
-                    @if (WebSecurity.IsAuthenticated)
-                    {
-
-                      
-                        if (Model.CalendarEvents.Any())
-                        {
-                            <div id="upcoming-events" class="breadcrumb">
-                                <h1>Your upcoming events
-                                </h1><br/>
-                                @foreach (var calendarEvent in Model.CalendarEvents)
-                                {
-                                    <div class="row">
-                                        <div class="span6">
-                                            <div class="span5">
-                                                <div class="calendar event_date">
-                                                    <span class="month">@Html.GetMonthName(calendarEvent.CalendarEventDate)</span>
-                                                    <span class="day">@calendarEvent.CalendarEventDate.Day</span>
-                                                </div>
-                                                <h3>@calendarEvent.Name</h3>
-                                                <span class="label label-info">@Html.DisplayDaysLeft(calendarEvent.CalendarEventDate)</span>
-                                            </div>
-                                            <!--/span5-->
-                                        </div>
-                                        <!--/span6-->
-                                    </div>
-                                    <!--/row-->
-                                    <hr />
-                                }
-                                
-           
-                                <a class="pull-right" onclick=" $('html,body').animate({ scrollTop: $('#infoyou').offset().top }, 1500); "><i class="icon-circle-arrow-up" style="cursor: pointer;"></i></a>
-               
-                            </div>
-                        }
-                        else
-                        {
-                            <p>Please take a moment to add an event!</p>
-                        }
-                    }
-                    else
-                    {
-                        <h1>Sign in below to start adding events
-                </h1><br/>
-                         using (Html.BeginForm("ExternalLogin", "Account", new {ReturnUrl = ViewBag.ReturnUrl}))
-                        {
-                            @Html.AntiForgeryToken()
-                            <button type="submit" name="provider" class="zocial facebook" value="facebook" title="Sign in using your Facebook account">Sign in with Facebook</button>
-                            <button type="submit" name="provider" class="zocial twitter" value="twitter" title="Sign in using your Twitter account">Sign in with Twitter</button>
-                        }
-                    }
-
-
-
+                    <div class="clearfix"></div>
                 </div>
-
-
-              
-                <div class="clearfix"></div>
-
             </div>
-            <!--/breadcrumb-->
         </div>
-        <!--/span6-->
+        <div class="row">
+            @Html.Partial("_Holidays", Model)
+        </div>
     </div>
-    <!--/row-->
-
+    <div id="column-2" class="span6">
+        @Html.Partial("_Events", Model)
+    </div>
+</div>
